# demonized-orb-optimizer

./: .dockerignore  .gitignore  LICENSE  Makefile  README.MD  dockerfile  pyproject.toml  requirements.txt
apps/api/: __init__.py  config.py  main.py  schemas.py
apps/api/routers/: __init__.py  health.py  optimize.py
apps/cli/: main.py
examples/: orb_level_weights.json  orb_weights.json  orbs.json  set_priority.json  slots.json
orb_optimizer/: __init__.py  cli.py  data_loader.py  defaults.py  memory_utils.py  models.py  optimizer.py  utils.py
orb_optimizer/solvers/: beam.py  greedy.py
src/orb_optimizer/: data_loader.py  defaults.py  models.py  reporter.py  utils.py
src/orb_optimizer/io/: loader.py  parsers.py  sources.py
src/orb_optimizer/solvers/: beam.py  greedy.py
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: app.tsx  index.css  main.tsx
web/src/components/orbs/: AddOrbDialog.tsx  EditOrbDialog.tsx  OrbDisplay.tsx  OrbGrid.tsx  OrbTile.tsx  OrbsEditor.tsx  rarity.ts
web/src/components/profiles/: ProfileCard.tsx  ProfileCardWithTemplate.tsx  ProfileCategoryPicker.tsx  ProfilesEditor.tsx  ShareablePicker.tsx  TemplatePicker.tsx
web/src/components/results/: CategoryGroup.tsx  ProfileResults.tsx  ResultViewer.tsx
web/src/components/slots/: CategoriesEditor.tsx
web/src/components/ui/: KvSelectTable.tsx  KvTable.tsx  Section.tsx  helpToolTip.tsx
web/src/lib/: api.ts  applyTemplate.tsx  categoryData.ts  colors.ts  orbData.ts  orbIcons.ts  persist.ts  priorityTemplates.tsx  rarityCaps.ts  resultParser.ts  types.ts
web/src/pages/: Home.tsx
