[project]
name = "orb-optimizer"
version = "1.0.0"
description = "A modular, OOP-driven orb loadout optimizer with beam/full search, Click CLI, and colorized output."
authors = [{ name = "Adam Rosenquist" }]
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "click>=8.1,<9.0"
]

[project.scripts]
orb-optimize = "orb_optimizer.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "ruff~=0.6",
  "mypy~=1.10",
  "pytest~=8.2",
  "black~=24.4"
]

[tool.uv]
cache-dir = ".uv-cache"

[tool.setuptools]
package-dir = {}  # flat layout

[tool.setuptools.packages.find]
include = ["orb_optimizer*"]   # only your package
exclude = ["data*", "examples*"]  # ignore support dirs


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
