[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "orb-optimizer"
version = "0.1.0"
description = "Optimizer core with CLI and FastAPI API for Demonized orbs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "arosenquist" }]

dependencies = [
  "pydantic>=2.7",
  "typing-extensions>=4.8",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]
cli = [
  "click>=8.1",
  "rich>=13.7",
]

[dependency-groups]
dev = [
  "ruff~=0.6",
  "mypy~=1.10",
  "pytest~=8.2",
  "black~=24.4"
]

# Console entry points
[project.scripts]
orb-optimize = "apps.cli.main:main"            # CLI command
orb-api-dev  = "apps.api._dev:run"             # helper to run uvicorn in dev

# expose ASGI app path for uvicorn
[project.entry-points."asgi_apps"]
orb_api = "apps.api.main:app"

# Source layout
[tool.hatch.build.targets.wheel]
packages = ["src/orb_optimizer", "apps"]

# Ruff / mypy (if you’re using them)
[tool.ruff]
line-length = 100
src = ["src", "apps", "tests"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
